tests/ui/traits/duplicate-generic-parameter-error-86756.stderr
error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/duplicate-generic-parameter-error-86756.rs:3:14
   |
LL | trait Foo<T, T = T> {}
   |           -  ^ already used
   |           |
   |           first use of `T`

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/duplicate-generic-parameter-error-86756.rs:7:10
   |
LL |     eq::<dyn, Foo>
   |          ^^^ not found in this scope

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/duplicate-generic-parameter-error-86756.rs:7:15
   |
LL |     eq::<dyn, Foo>
   |               ^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: `#[warn(bare_trait_objects)]` (part of `#[warn(rust_2021_compatibility)]`) on by default
help: if this is a dyn-compatible trait, use `dyn`
   |
LL |     eq::<dyn, dyn Foo>
   |               +++

error[E0107]: missing generics for trait `Foo`
  --> $DIR/duplicate-generic-parameter-error-86756.rs:7:15
   |
LL |     eq::<dyn, Foo>
   |               ^^^ expected at least 1 generic argument
   |
note: trait defined here, with at least 1 generic parameter: `T`
  --> $DIR/duplicate-generic-parameter-error-86756.rs:3:7
   |
LL | trait Foo<T, T = T> {}
   |       ^^^ -
help: add missing generic argument
   |
LL |     eq::<dyn, Foo<T>>
   |                  +++

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0107, E0403, E0412.
For more information about an error, try `rustc --explain E0107`.
